tests/parse_print/random_perturb/set01/delete-03/stderr.expected
Error:
    tests/parse_print/random_perturb/set01/delete-03/delete-03.essence:3:14:
  |
3 | find x : set (sze 2) of int(1..3)
  |              ^
Missing of

tests/parse_print/random_perturb/set01/delete-03/delete-03.essence:3:15:
  |
3 | find x : set (sze 2) of int(1..3)
  |               ^^^
Error: Symbol not found "sze"

tests/parse_print/random_perturb/set01/delete-03/delete-03.essence:3:19:
  |
3 | find x : set (sze 2) of int(1..3)
  |                   ^^^^^^^^^^^^^^^
Skipped tokens

tests/parse_print/random_perturb/set01/delete-03/delete-03.essence:3:19:
  |
3 | find x : set (sze 2) of int(1..3)
  |                   ^
Missing )
